--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav ml-auto">
-                <li><a class="fas fa-home nav-link text-light" href="/"> Home</a></li>
-                <li><a class="fas fa-users nav-link text-light" href="/users"> Users</a></li>
-                <li><a class="fas fa-book-open nav-link text-light" href="/books"> Books</a></li>
-                <li><a class="fas fa-sign-out-alt nav-link text-light" rel="nofollow" data-method="delete" href="/users/sign_out"> logout</a></li>
+                <li><%= link_to ' Home', user_path(current_user.id), class: "fas fa-home nav-link text-light" %></li>
+                <li><%= link_to ' Users', users_path  , class: "fas fa-users nav-link text-light" %></li>
+                <li><%= link_to ' Books', books_path, class: "fas fa-book-open nav-link text-light" %></li>
+                <li><%= link_to ' logout',destroy_user_session_path, method: :delete  , class: "fas fa-sign-out-alt nav-link text-light" %></li>
               </ul>
             </div>
           </div>
@@ -39,10 +39,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav ml-auto">
-                <li><a class="fas fa-home nav-link text-light" href="/"> Home</a></li>
-                <li><a class="fas fa-link nav-link text-light" href="/home/about"> About</a></li>
-                <li><a class="fas fa-user-plus nav-link text-light" href="/users/sign_up"> sign up</a></li>
-                <li><a class="fas fa-sign-in-alt nav-link text-light" href="/users/sign_in"> login</a></li>
+                <li><%= link_to ' Home', root_path, class: "fas fa-home nav-link text-light" %></li>
+                <li><%= link_to ' About', home_about_path, class: "fas fa-link nav-link text-light" %></li>
+                <li><%= link_to ' sign up', new_user_registration_path, class: "fas fa-user-plus nav-link text-light" %></li>
+                <li><%= link_to ' login', new_user_session_path, class: "fas fa-sign-in-alt nav-link text-light" %></li>
               </ul>
             </div>
           </div>
