--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,41 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<p id="notice"></p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+  <div class="col-md-3">
+      <h2>User info</h2>
+      <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", class: "attachment user profile_image fallback" %>
+      <table class="table">
+      <tbody>
+        <tr>
+  	      <th>name</th>
+  	        <th><%= @user.name %></th>
+          </tr>
+        <tr>
+  	      <th>introduction</th>
+  	      <th><%= @user.introduction %></th>
+        </tr>
+      </tbody>
+      </table>
+  　
+    <div class="row">
+      <%= link_to '', edit_user_path(current_user.id), class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
+    </div>
+      <h2 class="mt-3">New book</h2>
+      <%= form_with model:@book, local:true do |f| %>
+        <div class="form-group">
+          <label for="book_title">Title</label>
+          <%= f.text_field :title, class: "form-control book_title" %>
+        </div>
+        <div class="form-group">
+        <label for="book_opinion">Opinion</label>
+        <%= f.text_area :body, class: "form-control book_body" %>
+        </div>
+        <div class="form-group">
+        <%= f.submit "Create Book", class: "btn btn-success" %>
+        </div>
+      <% end %>
+      
+    </div>
+    <div class="col md-8 offset-md-1"></div>
+    </div>
+  </div>
