--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,3 +31,11 @@ body {
 .field, .actions {
     margin-bottom: 10px;
 }
+
+.notice {
+    color: green;
+}
+
+#error_explanation {
+    color: red;
+}
