--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,9 @@
         </nav>
       </header>
     <% end %>
+    <% flash.each do |key, value| %>
+    <%= content_tag :div, value, class: key %>
+    <% end %>
     <%= yield %>
     <footer>
       <div class="container mt-5">
