--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,77 +1,56 @@
 <p id="notice"></p>
-        <div class="container px-5 px-sm-0">
-  
+<div class="container px-5 px-sm-0">
+  <% if @book.errors.any? %>
+  <div id="error_explanation">
+    <% if @book.errors.count == 1 %>
+    <h3><%= @book.errors.count %> error prohibited this obj from being saved:</h3>
+    <% else %>
+    <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
+    <% end %>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+  <% end %>
   <div class="row">
-    <div class="col-md-3">
-      <h2>User info</h2>
-      <img class="attachment user profile_image fallback" src="/assets/no_image-ede28af4bad96368ef41be1b4be1cffce0d9402540f75d17895e32cb0d2af5e6.jpg"><table class="table">
-  <tbody><tr></tr>
-  <tr>
-	  <th>name</th>
-	  <th>yusyun</th>
-  </tr>
-  <tr>
-	  <th>introduction</th>
-	  <th></th>
-  </tr>
-</tbody></table>
-　
-<div class="row">
-  <a class="btn btn-outline-secondary btn-block fas fa-user-cog edit_user_2369" href="/users/2369/edit"></a>
-</div>
-      <h2 class="mt-3">New book</h2>
-      <form action="/books" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="1UJPMyvUiB9Pbn2sJQE4GTNKY1RElAN4WrPeoMgnACmwN7BRbSg1GhUgoG3JQgec4vMLMznFZeYKeUJ9tVvbyg==">
-  <div class="form-group">
-    <label for="book_title">Title</label>
-    <input class="form-control book_title" type="text" name="book[title]" id="book_title">
-  </div>
-  <div class="form-group">
-    <label for="book_opinion">Opinion</label>
-    <textarea class="form-control book_body" name="book[body]" id="book_body"></textarea>
-  </div>
-  <div class="form-group">
-    <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book">
-  </div>
-</form>
-    </div>
+    <%= render 'shared/userinfo', user: current_user, book: @book %>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
       <table class="table table-hover table-inverse">
-  <thead>
-    <tr>
-      <th></th>
-      <th>Title</th>
-      <th>Opinion</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-      <tr>
-        <td><a href="/users/2366">
-          <img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg">
-</a>        </td>
-        <td><a class="book_2576" href="/books/2576">リーダブルコード</a></td>
-        <td>より良いコードを書くためのシンプルで実践的なテクニック。</td>
-      </tr>
-      <tr>
-        <td><a href="/users/2367">
-          <img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg">
-</a>        </td>
-        <td><a class="book_2577" href="/books/2577">トラブル知らずのシステム設計</a></td>
-        <td>システム設計の要点を図解で説明してくれます。</td>
-      </tr>
-      <tr>
-        <td><a href="/users/2368">
-          <img class="attachment user profile_image fallback" src="/assets/no-image-icon-d3f9e11cb2bb284b42e0810f94b03c50126f51f482ea43054b87c2b7ebaa01d5.jpg">
-</a>        </td>
-        <td><a class="book_2578" href="/books/2578">たのしいRuby</a></td>
-        <td>Rubyの入門におすすめです。</td>
-      </tr>
-  </tbody>
-</table>
+      <thead>
+        <tr>
+        <th></th>
+        <th>Title</th>
+        <th>Opinion</th>
+        <th colspan="3"></th>
+        </tr>
+      </thead>
+      
+      <tbody>
+        <%  @books.each do |book| %>
+        <tr>
+        <td>
+          <%= link_to(user_path(book.user.id)) do %>
+          <%= attachment_image_tag @book.user, :profile_image,format: 'jpeg', fallback: "no_image.jpg" ,size: "40x40" %>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to(book_path(book.id)) do %>
+          <%= book.title %>
+          <% end %>
+        </td>
+        <td>
+          <%= book.body %>
+        </td>
+        </tr>
+        <% end %>
+      </tbody>
+      </table>
+    </div>
     </div>
   </div>
-</div>
   
 
   
