--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -44,6 +44,23 @@
         <td>
           <%= book.body %>
         </td>
+        <% if book.favorited_by?(current_user) %>
+          <td>
+            <%= link_to book_favorites_path(book), method: :delete do %>
+            <span class="fas fa-heart true"><%= book.favorites.count %></span>
+            <% end %>
+          </td>
+            <% else %>
+          <td>
+            <%= link_to book_favorites_path(book), method: :post do %>
+            <span class="fas fa-heart false"><%= book.favorites.count %></span>
+            <% end %>
+          </td>
+          <% end %>
+          </td>
+          <td>
+            コメント数: <%= book.book_comments.count %>
+          </td>
         </tr>
         <% end %>
       </tbody>
