--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,4 @@
-
+<p id="notice"></p>
 <div class="container">
   <div class="row">
    <%= render 'shared/userinfo', user: @book.user, book: @new_book %>
@@ -20,6 +20,22 @@
             
           </td>
           <td><%= @book.body %></td>
+          <% if @book.favorited_by?(current_user) %>
+          <td>
+            <%= link_to book_favorites_path(@book), method: :delete do %>
+            <span class="fas fa-heart true"><%= @book.favorites.count %></span>
+            <% end %>
+          </td>
+            <% else %>
+          <td>
+            <%= link_to book_favorites_path(@book), method: :post do %>
+            <span class="fas fa-heart false"><%= @book.favorites.count %></span>
+            <% end %>
+          </td>
+          <% end %>
+          <td>
+            コメント数: <%= @book.book_comments.count %>
+          </td>
           <% if  @book.user_id == current_user.id %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, class: "btn btn-sm btn-danger", data: { confirm: "本当に消しますか？"}%></td>
@@ -27,6 +43,35 @@
         </tr>
         </tbody>
       </table>
+      <table class="table">
+          <% @book.book_comments.each do |book_comment| %>
+          <tr>
+            <td>
+              <%= link_to(user_path(book_comment.user.id)) do %>
+              <%= attachment_image_tag book_comment.user, :profile_image,format: 'jpeg', fallback: "no_image.jpg" ,size: "40x40" %> <br>
+              <%= book_comment.user.name  %>
+              <% end %>
+            </td>
+            <td>
+            <%= book_comment.comment %>
+            </td>
+            <% if book_comment.user == current_user %>
+              <td>
+              <%= link_to 'Destroy', book_book_comments_path(book_comment), method: :delete, class: "btn btn-sm btn-danger" %>
+              </td>
+            <% end %>
+          </tr>
+          <% end %>
+          <tr>
+      </table>
+          <div class="new_comment">
+          <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
+          <%= f.text_area :comment, rows:'5' %>
+          <%= f.submit "送信" %>
+          <% end %>
+          </div>
+          </tr>
+        
     </div>
   </div>
 </div>
