[Update]add comment and good function

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,13 +23,13 @@
           <% if @book.favorited_by?(current_user) %>
           <td>
             <%= link_to book_favorites_path(@book), method: :delete do %>
-            <span class="fas fa-heart true"><%= @book.favorites.count %></span>
+            <div class="fas fa-heart true"><%= @book.favorites.count %></div>
             <% end %>
           </td>
             <% else %>
           <td>
             <%= link_to book_favorites_path(@book), method: :post do %>
-            <span class="fas fa-heart false"><%= @book.favorites.count %></span>
+            <div class="fas fa-heart false"><%= @book.favorites.count %></div>
             <% end %>
           </td>
           <% end %>
@@ -54,10 +54,11 @@
             </td>
             <td>
             <%= book_comment.comment %>
+            <%= book_comment.id %>
             </td>
             <% if book_comment.user == current_user %>
               <td>
-              <%= link_to 'Destroy', book_book_comments_path(book_comment), method: :delete, class: "btn btn-sm btn-danger" %>
+              <%= link_to "Destroy", book_book_comment_path(book_comment.book,book_comment), method: :delete, class: "btn btn-sm btn-danger" %>
               </td>
             <% end %>
           </tr>
